src/test/resources/typeSystemTestModels/invalid/expressions/BooleanAndOrValid.java
package typeSystemTestModels.invalid.expressions;

public class BooleanAndOrValid {
  boolean b = 1 && 2;
  boolean c = "String" || 1.2;
}
